--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "cheerio": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "fast-xml-parser": "^5.3.0",
     "lucide-react": "^0.552.0",
     "next": "16.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "sanitize-html": "^2.17.0",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
