--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "scrape:patch327": "node scripts/fetch-patch327.mjs"
   },
   "dependencies": {
     "cheerio": "^1.1.2",
