--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "scrape:patch327": "node scripts/fetch-patch327.mjs"
+    "scrape:patch327": "node scripts/fetch-patch327.mjs",
+    "shots:trade": "node scripts/capture-trade-screenshots.mjs"
   },
   "dependencies": {
     "cheerio": "^1.1.2",
@@ -29,6 +30,8 @@
     "eslint": "^9",
     "eslint-config-next": "16.0.1",
     "tailwindcss": "^4",
+    "puppeteer": "^23.7.0",
+    "node-fetch": "^3.3.2",
     "typescript": "^5"
   }
 }
